enum BedType {
  STANDARD,
  PREMIUM,
  ICU_BED,
  PEDIATRIC_BED,
  STRETCHER
}