abstract class Person {
  final String name;
  final String dateOfBirth;
  final String address;
  final String tel;

  Person({
    required this.name,
    required this.dateOfBirth,
    required this.address,
    required this.tel,
  });
}